--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 gitdb==4.0.12
 GitPython==3.1.44
+h11==0.14.0
 idna==3.10
 Jinja2==3.1.5
 jsonschema==4.23.0
@@ -16,6 +17,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.28.0
 numpy==2.2.3
+outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
@@ -23,19 +25,29 @@ protobuf==5.29.3
 pyarrow==19.0.1
 pydeck==0.9.1
 Pygments==2.19.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
 referencing==0.36.2
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.23.1
+selenium==4.29.0
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
 streamlit==1.42.2
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
+trio==0.29.0
+trio-websocket==0.12.2
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+wsproto==1.2.0
